--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
+    "compress-pickle>=2.1.0",
+    "hyperspy>=2.1.1",
+    "numba>=0.58.1",
+    "orix>=0.13.0",
     "pydantic>=2.9.2",
     "pyparsing>=3.1.4",
+    "pyxem>=0.19.1",
+    "setuptools>=75.3.0",
     "typer>=0.12.5",
 ]
