--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ dependencies = [
     "setuptools>=75.3.0",
     "typer>=0.12.5",
 ]
+
+[dependency-groups]
+dev = [
+    "ipympl>=0.9.3",
+    "jupyter>=1.1.1",
+]
