--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     "compress-pickle>=2.1.0",
+    "hyperspy-gui-ipywidgets>=2.0.3",
     "hyperspy>=2.1.1",
     "numba>=0.58.1",
     "orix>=0.13.0",
@@ -13,6 +14,7 @@ dependencies = [
     "pyparsing>=3.1.4",
     "pyxem>=0.19.1",
     "setuptools>=75.3.0",
+    "siphash24>=1.7",
     "typer>=0.12.5",
 ]
 
