--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyxem>=0.19.1",
     "setuptools>=75.3.0",
     "siphash24>=1.7",
+    "trackpy>=0.6.4",
     "typer>=0.12.5",
 ]
 
