--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,26 +3,22 @@ name = "crysm"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
-    "compress-pickle>=2.1.0",
-    "hyperspy-gui-ipywidgets>=2.1.0",
-    "hyperspy>=2.3.0",
     "numba>=0.61.2",
-    "orix>=0.13.3",
-    "plotly>=6.0.1",
+    "numpy>=1.0.0",
+    "matplotlib>=3.7.5",
     "pydantic>=2.11.3",
-    "pyparsing>=3.2.3",
-    "pyqt6>=6.9.0",
-    "pyxem>=0.20.0",
-    "setuptools>=80.0.0",
-    "siphash24>=1.7",
-    "trackpy>=0.6.4",
+    "rich>=13.7.1",
+    "tifffile>=2025.3.30",
     "typer>=0.15.2",
 ]
 
 [dependency-groups]
-dev = ["ipympl>=0.9.3", "jupyter>=1.1.1"]
+dev = ["ipympl>=0.9.3", "jupyter>=1.1.1", "pyxem>=0.20.0"]
 
 [project.scripts]
 crysm = "main:app"
+
+[tool.uv]
+package=true
