--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "crysm"
-version = "0.1.2"
+version = "0.1.3"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
+    "click==8.2.0",
     "imagecodecs>=2025.3.30",
     "numpy>1.24.4",
     "matplotlib>=3.7.5",
@@ -12,7 +13,7 @@ dependencies = [
     "rich>=13.7.1",
     "tifffile>=2025.5.10",
     "typer>=0.15.2",
-    "click==8.2.0",
+    "pyyaml>=6.0.0",
 ]
 
 [dependency-groups]
