--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 
 [dependency-groups]
 dev = ["ipympl>=0.9.3", "jupyter>=1.1.1", "pyxem>=0.20.0"]
+docs = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "IPython", "ipykernel"]
 
 [project.scripts]
 crysm = "main:app"
