--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,13 +22,13 @@ jobs:
           python-version: 3.13
       - name: Install
         run: pip install .[docs]
-      - name: Sphinx build
-        run: make html
+      - name: Mkdocs build
+        run: mkdocs build
         working-directory: docs
       - name: Deploy
         uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e # v4.0.0
         with:
           publish_branch: gh-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html
+          publish_dir: site
           force_orphan: true
