--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,27 +6,42 @@ theme:
     scheme: slate
     primary: deep orange
     accent: green
-features:
-  - announce.dismiss
-  - content.action.edit
-  - content.action.view
-  - content.code.annotate
-  - content.code.copy
-  - content.tooltips
-  - navigation.footer
-  - navigation.indexes
-  - navigation.sections
-  # - navigation.tabs
-  # - navigation.tabs.sticky
-  - navigation.top
-  - search.highlight
-  - search.suggest
-  - toc.follow
+  features:
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
+    - content.code.annotate
+    - content.code.copy
+    - content.tooltips
+    - navigation.footer
+    - navigation.indexes
+    - navigation.sections
+    # - navigation.tabs
+    # - navigation.tabs.sticky
+    - navigation.top
+    - search.highlight
+    - search.suggest
+    - toc.follow
+markdown_extensions:
+  - toc
+  - abbr
+  - attr_list
+  - admonition
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.pathconverter
+
 plugins:
   - search:
   - mkdocs-typer2:
-nav:
-  - Home: index.md
-  - Reference: reference.md
 watch:
   - src
+nav:
+  - Crysm: index.md
+  - Reference: reference.md
+  - PDF guide: cred_guide.pdf
